--- a/body-matter/2n/metodes-numerics.tex
+++ b/body-matter/2n/metodes-numerics.tex
@@ -19,15 +19,15 @@
 		\[
 		    \Phi(x;a_{1},\dots,a_{n})\colon\mathbb{R}\longrightarrow\mathbb{R}
 		\]
-		una família de funcions que depenen dels paràmetres reals \(a_{0},\dots,a_{n}\), una família \(\{(x_{i},y_{i})\}_{i=0}^{n}\) de \(n\) punts.
-		Direm que el problema d'interpolació de \(\{(x_{i},y_{i})\}_{i=0}^{n}\) per \(\Phi(x;a_{0},\dots,a_{n})\) consisteix a determinar \(a_{0},\dots,a_{n}\) tals que
+		una família de funcions que depenen dels paràmetres reals~\(a_{0},\dots,a_{n}\), una família~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) de~\(n\) punts.
+		Direm que el problema d'interpolació de~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) per~\(\Phi(x;a_{0},\dots,a_{n})\) consisteix a determinar~\(a_{0},\dots,a_{n}\) tals que
 		\[
 		    \Phi(x_{i};a_{0},\dots,a_{n})=y_{i}\quad\text{per a tot }i\in\{1,\dots,n\}.
 		\]
 		
-		També direm que \(\{(x_{i},y_{i})\}_{i=0}^{n}\) són els punts de suport, \(\{x_{i}\}_{i=0}^{n}\) són les abscisses de suport i \(\{y_{i}\}_{i=0}^{n}\) les ordenades de suport.
+		També direm que~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) són els punts de suport,~\(\{x_{i}\}_{i=0}^{n}\) són les abscisses de suport i~\(\{y_{i}\}_{i=0}^{n}\) les ordenades de suport.
 		
-		Direm que un problema d'interpolació de \(\{(x_{i},y_{i})\}_{i=0}^{n}\) per \(\Phi(x;a_{0},\dots,a_{n})\) és un problema d'interpolació lineal si existeixen \(\Phi_{0},\dots,\Phi_{n}\colon\mathbb{R}\longrightarrow\mathbb{R}\) tals que
+		Direm que un problema d'interpolació de~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) per~\(\Phi(x;a_{0},\dots,a_{n})\) és un problema d'interpolació lineal si existeixen~\(\Phi_{0},\dots,\Phi_{n}\colon\mathbb{R}\longrightarrow\mathbb{R}\) tals que
 		\[
 		    \Phi(x;a_{0},\dots,a_{n})=a_{0}\Phi_{0}(x)+\dots+a_{n}\Phi_{n}(x).
 		\]
@@ -55,12 +55,12 @@
 	\subsection{Interpolació de Lagrange}
 	\begin{definition}[Problema d'interpolació de Lagrange]
 		\labelname{problema d'interpolació de Lagrange}\label{def:problema d'interpolació de Lagrange}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació per \(P(x;a_{0},\dots,a_{n})\in\mathbb{R}_{n}[x]\) tal que \(x_{i}\neq x_{j}\) per a tot \(i,j\in\{0,\dots,n-1\}\), amb \(i\neq j\).
+		Sigui~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació per~\(P(x;a_{0},\dots,a_{n})\in\mathbb{R}_{n}[x]\) tal que~\(x_{i}\neq x_{j}\) per a tot~\(i,j\in\{0,\dots,n-1\}\), amb~\(i\neq j\).
 		Aleshores direm que el problema d'interpolació és un problema d'interpolació de Lagrange.
 	\end{definition}
 	\begin{definition}[Polinomis bàsics de Lagrange]
 		\labelname{problema polinomis bàsics de Lagrange}\label{def:problema polinomis bàsics de Lagrange}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x;a_{0},\dots,a_{n})\in\mathbb{R}_{n}[x]\) on, per a cert \(k\in\{0,\dots,n\}\) fix tenim que \(y_{k}=1\) i per a tot \(i\in I=\{0,\dots,k-1,k+1,\dots,n\}\) tenim \(y_{i}=0\).
+		Sigui~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per~\(P(x;a_{0},\dots,a_{n})\in\mathbb{R}_{n}[x]\) on, per a cert~\(k\in\{0,\dots,n\}\) fix tenim que~\(y_{k}=1\) i per a tot~\(i\in I=\{0,\dots,k-1,k+1,\dots,n\}\) tenim~\(y_{i}=0\).
 		Aleshores direm que els polinomis
 		\[
 		    L_{k}(x)=\prod_{i\in I}\frac{x-x_{i}}{x_{k}-x_{i}}=\frac{(x-x_{0})\cdots(x-x_{k-1})(x-x_{k+1})\cdots(x-x_{n})}{(x_{k}-x_{0})\cdots(x_{k}-x_{k-1})(x_{k}-x_{k+1})\cdots(x_{k}-x_{n})}
@@ -74,34 +74,34 @@
 		\end{cases}\]
 	\end{observation}
 	\begin{proposition}\label{prop:unicitat interpolació de Lagrange}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\).
-		Aleshores la funció \(P(x)\) que satisfà
+		Sigui~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per~\(P(x)\).
+		Aleshores la funció~\(P(x)\) que satisfà
 		\[
 		    P(x_{i})=y_{i}
 		\]
-		per a tot \(i\in\{0,\dots,n\}\) és única.
+		per a tot~\(i\in\{0,\dots,n\}\) és única.
 		\begin{proof}
 			Per l'observació \myref{obs:polinomis bàsics de Lagrange cases} veiem que una solució a aquest problema d'interpolació és
 			\[
 			    P(x)=y_{0}L_{0}(x)+y_{1}L_{1}(x)+\dots+y_{n}L_{n}(x).
 			\]
-			Per veure'n la unicitat suposem que existeix un altre \(Q(x)\in\mathbb{R}_{n+1}[x]\) tal que
+			Per veure'n la unicitat suposem que existeix un altre~\(Q(x)\in\mathbb{R}_{n+1}[x]\) tal que
 			\[
 			    P(x_{i})=Q(x_{i})=y_{i}
 			\]
-			per a tot \(i\in\{0,\dots,n\}\).
+			per a tot~\(i\in\{0,\dots,n\}\).
 			Això és equivalent a que
 			\[
 			    P(x_{i})-Q(x_{i})=0
 			\]
-			per a tot \(i\in\{0,\dots,n\}\).
-			Ara bé, tenim que \(x_{0},\dots,x_{n}\) són arrels diferents de \(P(x)-Q(x)\) per la definició de \myref{def:problema d'interpolació de Lagrange}.
-			Com que \(P(x)-Q(x)\in\mathbb{R}_{n+1}[x]\), aquests són els seus únics zeros, i pel Teorema Fonamental de l'Àlgebra tenim que ha de ser \(P(x)=Q(x)\).
+			per a tot~\(i\in\{0,\dots,n\}\).
+			Ara bé, tenim que~\(x_{0},\dots,x_{n}\) són arrels diferents de~\(P(x)-Q(x)\) per la definició de \myref{def:problema d'interpolació de Lagrange}.
+			Com que~\(P(x)-Q(x)\in\mathbb{R}_{n+1}[x]\), aquests són els seus únics zeros, i pel Teorema Fonamental de l'Àlgebra tenim que ha de ser~\(P(x)=Q(x)\).
 			%REFERENCIES
 		\end{proof}
 	\end{proposition}
 	\begin{proposition}\label{prop:Algorisme de Neville}
-		Siguin \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un conjunt de punts de suport, \(I=\{i_{0},\dots,i_{k}\}\subseteq\{1,\dots,n\}\) un conjunt i \(\{(x_{i},y_{i})\}_{i\in I}\) un problema d'interpolació per \(P_{i_{0},\dots,i_{k}}\in\mathbb{R}_{k}[x]\), on
+		Siguin~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) un conjunt de punts de suport,~\(I=\{i_{0},\dots,i_{k}\}\subseteq\{1,\dots,n\}\) un conjunt i~\(\{(x_{i},y_{i})\}_{i\in I}\) un problema d'interpolació per~\(P_{i_{0},\dots,i_{k}}\in\mathbb{R}_{k}[x]\), on
 		\[
 		    P_{i_{0},\dots,i_{k}}\left(x_{i_{j}}\right)=y_{i_{j}}\quad\text{per a tot }j\in\{0,\dots,k\}.
 		\]
@@ -114,7 +114,7 @@
 		    P_{i_{0},\dots,i_{k}}(x)=\frac{\left(x-x_{i_{0}}\right)P_{i_{1},\dots,i_{k}}(x)-\left(x-x_{i_{k}}\right)P_{i_{0},\dots,i_{k-1}}(x)}{x_{i_{k}}-x_{i_{0}}}.
 		\]
 		\begin{proof}
-			Fixem \(k=1\).
+			Fixem~\(k=1\).
 			Aleshores tenim
 			\[
 			    P_{i}(x)=y_{i}.
@@ -125,7 +125,7 @@
 			\[
 			    G(x)=\frac{\left(x-x_{i_{0}}\right)P_{i_{1},\dots,i_{k}}(x)-\left(x-x_{i_{k}}\right)P_{i_{0},\dots,i_{k-1}}(x)}{x_{i_{k}}-x_{i_{0}}}
 			\]
-			tenim \(G=P_{i_{0},\dots,i_{k}}\) per la proposició \myref{prop:unicitat interpolació de Lagrange}, i per tant
+			tenim~\(G=P_{i_{0},\dots,i_{k}}\) per la proposició \myref{prop:unicitat interpolació de Lagrange}, i per tant
 			\[
 			    G(x_{i_{0}})=P_{i_{0},\dots,i_{k-1}}(x_{i_0})=y_{i_{0}}
 			\]
@@ -137,7 +137,7 @@
 			\[
 			    G(x_{i_{j}})=\frac{(x_{i_{j}}-x_{i_{0}})y_{i_{j}}-(x_{i_{j}}-x_{i_{k}})y_{i_{j}}}{x_{i_{k}}-x_{i_{0}}}=y_{i_{j}}
 			\]
-			per a tot \(j\in\{1,\dots,k-1\}\), com volíem veure.
+			per a tot~\(j\in\{1,\dots,k-1\}\), com volíem veure.
 		\end{proof}
 	\end{proposition}
 	\begin{observation}[Algorisme de Neville]\labelname{algorisme de Neville}\label{obs:Algorisme de Neville}
@@ -155,8 +155,8 @@
 		Es coneix com a algorisme de Neville.
 	\end{observation}
 	\begin{example}\label{ex:Algorisme de Neville}
-		Sigui \(\{(0,1),(1,3),(3,2)\}\) un problema d'interpolació per \(P_{0,1,2}(x)\in\mathbb{R}_{2}[x]\).
-		Volem avaluar el polinomi interpolador de Lagrange en \(x=2\), és a dir, volem trobar \(P_{0,1,2}(2)\).
+		Sigui~\(\{(0,1),(1,3),(3,2)\}\) un problema d'interpolació per~\(P_{0,1,2}(x)\in\mathbb{R}_{2}[x]\).
+		Volem avaluar el polinomi interpolador de Lagrange en~\(x=2\), és a dir, volem trobar~\(P_{0,1,2}(2)\).
 		\begin{solution}La taula de l'algoritme de Neville plantejada en l'observació \myref{obs:Algorisme de Neville} per aquest problema és
 			\[\begin{array}{c|ccc}
 			& k=0 & k=1 & k=2 \\\hline
@@ -166,30 +166,30 @@
 			& & P_{1,2}(2)=\frac{5}{2} &\\
 			x_{2}=3 & y_{2}=P_{2}(2)=2 & &
 			\end{array}\]
-			i per tant trobem \(P_{0,1,2}(2)=\frac{10}{3}\).
+			i per tant trobem~\(P_{0,1,2}(2)=\frac{10}{3}\).
 		\end{solution}
 	\end{example}
 	\subsection{Mètode de les diferències dividides de Newton}
 	El mètode de Neville és útil per avaluar un polinomi interpolador en un punt una vegada, però si es vol obtenir l'expressió general del polinomi interpolador per poder avaluar-lo múltiples vegades en diferents punts s'hauran d'emparar altres solucions.
 	\begin{definition}[Diferències dividides]
 		\labelname{diferències dividides}\label{def:diferències dividides}
-		Sigui \(P(x;a_{0},\dots,a_{n})\) el polinomi interpolador de Lagrange amb els punts de suport \(\{(x_{i},y_{i})\}_{i=0}^{n}\).
+		Sigui~\(P(x;a_{0},\dots,a_{n})\) el polinomi interpolador de Lagrange amb els punts de suport~\(\{(x_{i},y_{i})\}_{i=0}^{n}\).
 		Aleshores direm que
 		\[
 		    [x_{0},\dots,x_{k}]=a_{k}
 		\]
-		és 	la diferència dividida d'ordre \(n\) del problema d'interpolació de Lagrange de \(\{(x_{i},y_{i})\}_{i=0}^{k}\) per \(P(x;a_{0},\dots,a_{k})\).
+		és 	la diferència dividida d'ordre~\(n\) del problema d'interpolació de Lagrange de~\(\{(x_{i},y_{i})\}_{i=0}^{k}\) per~\(P(x;a_{0},\dots,a_{k})\).
 		
 		Aquesta definició té sentit per la proposició \myref{prop:unicitat interpolació de Lagrange}.
 	\end{definition}
 	\begin{proposition}\label{prop:Mètode diferències dividides}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\).
+		Sigui~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per~\(P(x)\).
 		Aleshores
 		\begin{multline*}
 		P(x)=[x_{0}]+[x_{0},x_{1}](x-x_{0})+[x_{0},x_{1},x_{2}](x-x_{0})(x-x_{1})+\cdots\\\cdots+[x_{0},\dots,x_{n}](x-x_{0})\cdots(x-x_{n-1})=\sum_{i=0}^{n}\left([x_{0},\dots,x_{i}]\prod_{j=0}^{i-1}(x-x_{j})\right).
 		\end{multline*}
 		\begin{proof}
-			Denotem per \(P_{1,\dots,k}\in\mathbb{K}_{k+1}[x]\) el polinomi que satisfà
+			Denotem per~\(P_{1,\dots,k}\in\mathbb{K}_{k+1}[x]\) el polinomi que satisfà
 			\[
 			    P_{0,\dots,k}(x_{j})=y_{j}\quad\text{per a tot }j\in\{0,\dots,k\}.
 			\]
@@ -197,7 +197,7 @@
 			\[
 			    G_{k}(x)=P_{0,\dots,k}(x)-P_{0,\dots,k-1}(x)
 			\]
-			té com arrels \(x_{0},\dots,x_{k-1}\), i per tant existeix una única costant \(C_{k}\) tal que
+			té com arrels~\(x_{0},\dots,x_{k-1}\), i per tant existeix una única costant~\(C_{k}\) tal que
 			\[
 			    G_{k}(x)=C_{k}(x-x_{0})\cdots(x-x_{k-1})
 			\]
@@ -205,7 +205,7 @@
 			\[
 			    G_{k}(x)=a_{0}+a_{1}x+\dots+a_{k}x^{k}
 			\]
-			tenim que \(C_{k}=a_{k}\).
+			tenim que~\(C_{k}=a_{k}\).
 			Aleshores per la definició de \myref{def:diferències dividides} tenim que
 			\[
 			    G_{k}(x)=[x_{0},\dots,x_{k}](x-x_{0})\cdots(x-x_{k-1})
@@ -221,14 +221,14 @@
 			=&P_{n-r}(x)+\sum_{i=0}^{n-r+1}\left([x_{0},\dots,x_{n-l+1}]\prod_{j=0}^{n-r}(x-x_{j})\right)\tag{r>0}\\
 			\vdots&\\
 			=&P_{1}(x)+[x_{0},x_{1}](x-x_{0})+[x_{0},x_{1},x_{2}](x-x_{0})(x-x_{1})+\cdots\\&\dots+[x_{0},\dots,x_{n-1}](x-x_{0})\cdots(x-x_{n-2})+\\&+[x_{0},\dots,x_{n}](x-x_{0})\cdots(x-x_{n-1})\\
-			\intertext{i per la definició de \myref{def:diferències dividides} tenim que \(P_{1}(x)=[x_{0}]\)}
+			\intertext{i per la definició de \myref{def:diferències dividides} tenim que~\(P_{1}(x)=[x_{0}]\)}
 			=&[x_{0}]+[x_{0},x_{1}](x-x_{0})+\dots+[x_{0},\dots,x_{n-1}](x-x_{0})\cdots(x-x_{n-2})+\\&+[x_{0},\dots,x_{n}](x-x_{0})\cdots(x-x_{n-1})=P(x).\qedhere
 			\end{align*}
 		\end{proof}
 	\end{proposition}
 	\begin{observation}\label{obs:mètode diferències dividides invariant per permutacions}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange.
-		Aleshores per a tot \(\sigma\in S_{4}\) tenim
+		Sigui~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange.
+		Aleshores per a tot~\(\sigma\in S_{4}\) tenim
 		\[
 		    [x_{0},\dots,x_{n}]=[x_{\sigma{0}},\dots,x_{\sigma(n)}].
 		\]
@@ -238,7 +238,7 @@
 		\end{proof}
 	\end{observation}
 	\begin{proposition}\label{prop:algoritme diferències dividides de Newton}
-		Sigui \(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\).
+		Sigui~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per~\(P(x)\).
 		Aleshores
 		\begin{equation}\label{eq:prop:algoritme diferències dividides de Newton 1}
 		[x_{i}]=y_{i}\quad\text{per a tot }i\in\{0,\dots,n\}
@@ -248,13 +248,13 @@
 		[x_{0},\dots,x_{n}]=\frac{[x_{1},\dots,x_{n}]-[x_{0},\dots,x_{n-1}]}{x_{n}-x_{0}}.
 		\end{equation}
 		\begin{proof}
-			Per veure \eqref{eq:prop:algoritme diferències dividides de Newton 1} tenim prou en veure que per a un problema d'interpolació de \(\{(x,y)\}\) per \(P(x)\) tenim que \(P(x)\in\mathbb{R}_{0}[x]\), i per tant és una constant i per la definició de \myref{def:diferències dividides} trobem \([x]=y\).
+			Per veure \eqref{eq:prop:algoritme diferències dividides de Newton 1} tenim prou en veure que per a un problema d'interpolació de~\(\{(x,y)\}\) per~\(P(x)\) tenim que~\(P(x)\in\mathbb{R}_{0}[x]\), i per tant és una constant i per la definició de \myref{def:diferències dividides} trobem~\([x]=y\).
 			
 			Per veure \eqref{eq:prop:algoritme diferències dividides de Newton 2} tenim, per la proposició \myref{prop:Algorisme de Neville}
 			\[
 			    P_{0,\dots,n}(x)=\frac{\left(x-x_{0}\right)P_{1,\dots,n}(x)-\left(x-x_{n}\right)P_{0,\dots,n-1}(x)}{x_{n}-x_{0}},
 			\]
-			on \(P_{i_{1},\dots,i_{k}}(x)\) és el polinomi interpolador de Lagrange del problema interpolador del problema \(\{(x_{i},y_{i})\}_{i\in\{i_{1},\dots,i_{k}\}}\).
+			on~\(P_{i_{1},\dots,i_{k}}(x)\) és el polinomi interpolador de Lagrange del problema interpolador del problema~\(\{(x_{i},y_{i})\}_{i\in\{i_{1},\dots,i_{k}\}}\).
 			Per tant per la proposició \myref{prop:Mètode diferències dividides} trobem %REVISAR? fa mandra
 			\[
 			    [x_{0},\dots,x_{n}]=\frac{[x_{1},\dots,x_{n}]-[x_{0},\dots,x_{n-1}]}{x_{n}-x_{0}},
@@ -263,21 +263,21 @@
 		\end{proof}
 	\end{proposition}
 	%	\begin{example}
-	%		La velocitat vertical d'un coet \(v(t)\) en certs instants de temps ve donada per la taula
+	%		La velocitat vertical d'un coet~\(v(t)\) en certs instants de temps ve donada per la taula
 	%		\[\begin{array}{r|rrrr}
 	%			t~(s) & 0 & 15 & 22.5 & 30\\\hline
 	%			v(t)~(\frac{m}{s}) & 0 & 375 & 600 & 900
 	%		\end{array}\]
 	%		Volem aproximar
 	%		\begin{enumerate}
-	%			\item La velocitat del coet en l'instant \(t'_{1}=16\).
-	%			\item La distància recorreguda pel coet entre els instants \(t'_{0}=11\) i \(t'_{1}=16\).
-	%			\item L'acceleració del coet en l'instant \(t'_{1}=16\).
+	%			\item La velocitat del coet en l'instant~\(t'_{1}=16\).
+	%			\item La distància recorreguda pel coet entre els instants~\(t'_{0}=11\) i~\(t'_{1}=16\).
+	%			\item L'acceleració del coet en l'instant~\(t'_{1}=16\).
 	%		\end{enumerate}
 	%		\begin{solution}
-	%			Denotem \(t_{0}=0\), \(t_{1}=15\), \(t_{2}=22.5\), \(t_{3}=30\). El conjunt \(\{t_{i}\}_{i=0}^{3}\) és el conjunt d'abscisses del problema d'interpolació de \(\{(t_{i},v(t_{i}))\}_{i=0}^{3}\) pel polinomi \(P_{0,1,2,3}(t)\). Com que els elements del conjunt d'abscisses són tots diferents dos a dos tenim que aquest problema d'interpolació és un problema d'interpolació de Lagrange per la definició de \myref{def:problema d'interpolació de Lagrange}.
+	%			Denotem~\(t_{0}=0\),~\(t_{1}=15\),~\(t_{2}=22.5\),~\(t_{3}=30\). El conjunt~\(\{t_{i}\}_{i=0}^{3}\) és el conjunt d'abscisses del problema d'interpolació de~\(\{(t_{i},v(t_{i}))\}_{i=0}^{3}\) pel polinomi~\(P_{0,1,2,3}(t)\). Com que els elements del conjunt d'abscisses són tots diferents dos a dos tenim que aquest problema d'interpolació és un problema d'interpolació de Lagrange per la definició de \myref{def:problema d'interpolació de Lagrange}.
 	%			
-	%			Per començar volem avaluar el polinomi de Lagrange \(P_{0,1,2,3}(t)\) en l'instant \(t'_{1}=16\), és a dir, volem calcular \(P_{0,1,2,3}(16)\). La taula de l'algoritme de Neville plantejada en l'observació \myref{obs:Algorisme de Neville} per aquest problema és
+	%			Per començar volem avaluar el polinomi de Lagrange~\(P_{0,1,2,3}(t)\) en l'instant~\(t'_{1}=16\), és a dir, volem calcular~\(P_{0,1,2,3}(16)\). La taula de l'algoritme de Neville plantejada en l'observació \myref{obs:Algorisme de Neville} per aquest problema és
 	%			\[\begin{array}{c|ccccc}
 	%			& k=0 & k=1 & k=2 & k=3 \\\hline
 	%			x_{0}=0 & y_{0}=P_{0}(2)=1 & & \\
@@ -302,16 +302,16 @@
 	%	\end{example}
 	\subsection{Error en la interpolació de Lagrange}
 	\begin{theorem}\label{thm:primera fita de l'error en la interpolació de Lagrange}
-		Siguin \(f\colon[a,b]\longrightarrow\mathbb{R}\) una funció de classe de diferenciabilitat \(\mathcal{C}^{n+1}\) i \(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per \(P(x)\) amb abscisses de suport que satisfan \(\{x_{i}\}_{i=0}^{n}\subset[a,b]\).
-		Aleshores per a tot \(x\in[a,b]\) tenim
+		Siguin~\(f\colon[a,b]\longrightarrow\mathbb{R}\) una funció de classe de diferenciabilitat~\(\mathcal{C}^{n+1}\) i~\(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange per~\(P(x)\) amb abscisses de suport que satisfan~\(\{x_{i}\}_{i=0}^{n}\subset[a,b]\).
+		Aleshores per a tot~\(x\in[a,b]\) tenim
 		\[
 		    f(x)-P(x)=\frac{f^{(n+1)}(\xi(x))}{(n+1)!}\omega(x),
 		\]
-		on \(\omega(x)=(x-x_{0})\cdots(x-x_{n})\), per a una certa funció \(\xi(x)\colon[a,b]\longrightarrow[c,d]\) amb \(c=\min\left\{\min_{i\in[0,n]}\{x_{i}\},x\right\}\) i \(d=\max\left\{\max_{i\in[0,n]}\{x_{i}\},x\right\}\).
+		on~\(\omega(x)=(x-x_{0})\cdots(x-x_{n})\), per a una certa funció~\(\xi(x)\colon[a,b]\longrightarrow[c,d]\) amb~\(c=\min\left\{\min_{i\in[0,n]}\{x_{i}\},x\right\}\) i~\(d=\max\left\{\max_{i\in[0,n]}\{x_{i}\},x\right\}\).
 		\begin{proof}
-			Fixem \(x\in[a,b]\).
-			Tenim \(f(x_{i})-P(x_{i})=0\) per a tot \(i\in\{0,\dots,n\}\).
-			Si imposem \(x\notin\{x_{0},\dots,x_{n}\}\) i definim la funció
+			Fixem~\(x\in[a,b]\).
+			Tenim~\(f(x_{i})-P(x_{i})=0\) per a tot~\(i\in\{0,\dots,n\}\).
+			Si imposem~\(x\notin\{x_{0},\dots,x_{n}\}\) i definim la funció
 			\[
 			    F(z)=f(z)-P(z)-\omega(z)S(x)
 			\]
@@ -319,7 +319,7 @@
 			\begin{equation}\label{eq:thm:primera fita de l'error en la interpolació de Lagrange 1}
 			S(x)=\frac{f(x)-P(x)}{\omega(x)}.
 			\end{equation}
-			Observem que \(S(x)\) està ben definida pel Teorema Fonamental de l'Àlgebra.
+			Observem que~\(S(x)\) està ben definida pel Teorema Fonamental de l'Àlgebra.
 			%REF
 			
 			Observem també que
@@ -330,10 +330,10 @@
 			\[
 			    F(x)=f(x)-P(x)-\omega(x)\frac{f(x)-P(x)}{\omega(x)}=0
 			\]
-			és a dir, \(F(z)\) existeixen \(\xi^{(0)}_{0},\dots,\xi^{(0)}_{n+1}\in[a,b]\) tals que \(F(\xi^{(0)}_{i})=0\) per a tot \(i\in\{0,\dots,n+1\}\) amb \(\xi^{(0)}_{i+1}>\xi^{(0)}_{i}\) per a tot \(i\in\{0,\dots,n\}\).
+			és a dir,~\(F(z)\) existeixen~\(\xi^{(0)}_{0},\dots,\xi^{(0)}_{n+1}\in[a,b]\) tals que~\(F(\xi^{(0)}_{i})=0\) per a tot~\(i\in\{0,\dots,n+1\}\) amb~\(\xi^{(0)}_{i+1}>\xi^{(0)}_{i}\) per a tot~\(i\in\{0,\dots,n\}\).
 			
-			Aplicant el \myref{thm:Teorema de Rolle} trobem que per a tot \(i\in\{1,\dots,n+1\}\) existeixen \(\{\xi^{(1)}_{i}\}_{i=1}^{n+1}\) tals que \(F'(\xi^{(1)}_{i})=0\) amb \(\xi^{(1)}_{i}\in(\xi^{(0)}_{i-1},\xi^{(0)}_{i})\).
-			Iterant aquest argument trobem que per a \(k\in\{0,\dots,n+1\}\) tenim que per a tot \(i\in\{k,\dots,n+1\}\) existeixen \(\{\xi^{(k)}_{i}\}_{i=k}^{n+1}\) tals que \(F^{k}(\xi^{(k)}_{i})=0\) amb \(\xi^{(k)}_{i}\in(\xi^{(k-1)}_{i-1},\xi^{(k-1)}_{i})\); i per tant quan \(k=n+1\) tenim que existeix \(\xi^{(n+1)}_{n+1}\in(\xi^{(n)}_{n},\xi^{(n)}_{n+1})\) tal que \(F^{(n+1)}(\xi^{(n+1)}_{n+1})=0\) i trobem%
+			Aplicant el \myref{thm:Teorema de Rolle} trobem que per a tot~\(i\in\{1,\dots,n+1\}\) existeixen~\(\{\xi^{(1)}_{i}\}_{i=1}^{n+1}\) tals que~\(F'(\xi^{(1)}_{i})=0\) amb~\(\xi^{(1)}_{i}\in(\xi^{(0)}_{i-1},\xi^{(0)}_{i})\).
+			Iterant aquest argument trobem que per a~\(k\in\{0,\dots,n+1\}\) tenim que per a tot~\(i\in\{k,\dots,n+1\}\) existeixen~\(\{\xi^{(k)}_{i}\}_{i=k}^{n+1}\) tals que~\(F^{k}(\xi^{(k)}_{i})=0\) amb~\(\xi^{(k)}_{i}\in(\xi^{(k-1)}_{i-1},\xi^{(k-1)}_{i})\); i per tant quan~\(k=n+1\) tenim que existeix~\(\xi^{(n+1)}_{n+1}\in(\xi^{(n)}_{n},\xi^{(n)}_{n+1})\) tal que~\(F^{(n+1)}(\xi^{(n+1)}_{n+1})=0\) i trobem%
 				\begin{comment}
 					\marginpar{Dime si es verdad\\
 					Que alguien ha logrado escapar de esta tela de araña.\\
@@ -361,8 +361,8 @@
 		\]
 	\end{observation}
 	\begin{corollary}
-		Sigui \(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange.
-		Aleshores existeix un cert \(\xi\in[x_{0},x_{n}]\) tal que
+		Sigui~\(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange.
+		Aleshores existeix un cert~\(\xi\in[x_{0},x_{n}]\) tal que
 		\[
 		    [x_{0},\dots,x_{n}]=\frac{f^{(n)}(\xi)}{n!}.
 		\]
@@ -374,23 +374,23 @@
 		x_{i} & 100 & 101 & 102 & 103\\
 		\log(x_{i}) & \log(100) & \log(101) & \log(102) & \log(103)
 		\end{array}\]
-		per \(P(x)\).
-		Volem estimar l'error comés en calcular el valor de \(P(102.5)\).
+		per~\(P(x)\).
+		Volem estimar l'error comés en calcular el valor de~\(P(102.5)\).
 		\begin{solution}
 			Per la definició de \myref{def:problema d'interpolació de Lagrange} tenim que aquest problema d'interpolació és de Lagrange.
 			Aleshores, pel Teorema \myref{thm:primera fita de l'error en la interpolació de Lagrange} tenim que
 			\[
 			    f(x)-P(x)=\frac{f^{(4)}(\xi(x))}{4!}\omega(x)
 			\]
-			i per tant, amb \(f(x)=\log(x)\),
+			i per tant, amb~\(f(x)=\log(x)\),
 			\[
 			    \log(x)-P(x)=\frac{-1}{\xi^{4}(x)4}(x-100)(x-101)(x-102)(x-103)
 			\]
-			i si prenem \(x=102.5\) tenim
+			i si prenem~\(x=102.5\) tenim
 			\[
 			    \log(102.5)-P(102.5)=\frac{-1}{\xi^{4}(102.5)4}\frac{5}{2}\frac{3}{2}\frac{1}{2}\frac{-1}{2}
 			\]
-			amb \(\xi(102.5)\in[100,103]\), i per tant \(\frac{1}{103}\leq\frac{1}{\xi(102.5)}\leq\frac{1}{100}\).
+			amb~\(\xi(102.5)\in[100,103]\), i per tant~\(\frac{1}{103}\leq\frac{1}{\xi(102.5)}\leq\frac{1}{100}\).
 			Aleshores tenim
 			\[
 			    \abs{\log(102.5)-P(x)}=\frac{3\cdot5}{2^{4}\cdot\xi^{4}(102.5)}\leq\frac{15}{64}\frac{1}{100^{4}}\approx2.34\cdot10^{-9}.\qedhere
@@ -400,12 +400,12 @@
 	\subsection{Interpolació en nodes equiespaiats}
 	\begin{definition}[Nodes equiespaiats]
 		\labelname{nodes equiespaiats}\label{def:nodes equiespaiats}
-		Sigui \(\{x_{i}\}_{i=0}^{n}\) abscisses de suport que satisfacin
+		Sigui~\(\{x_{i}\}_{i=0}^{n}\) abscisses de suport que satisfacin
 		\[
 		    x_{i}=x_{0}+ih
 		\]
-		amb \(h=\frac{x_{n}-x_{0}}{n}\) per a tot \(i\in\{0,\dots,n\}\).
-		Aleshores direm que les abscisses de suport \(\{x_{i}\}_{i=0}^{n}\) són equiespaiades o que un problema d'interpolació \(\{(x_{i},y_{i})\}_{i=0}^{n}\) és un problema d'interpolació amb nodes equiespaiats.
+		amb~\(h=\frac{x_{n}-x_{0}}{n}\) per a tot~\(i\in\{0,\dots,n\}\).
+		Aleshores direm que les abscisses de suport~\(\{x_{i}\}_{i=0}^{n}\) són equiespaiades o que un problema d'interpolació~\(\{(x_{i},y_{i})\}_{i=0}^{n}\) és un problema d'interpolació amb nodes equiespaiats.
 		
 		També denotarem
 		\[
@@ -413,14 +413,14 @@
 		\]
 	\end{definition}
 	\begin{theorem}\label{thm:diferències dividides en nodes equidistants}
-		Sigui \(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange amb nodes equiespaiats.
-		Aleshores, si \(h=\frac{x_{n}-x_{0}}{n}\) tenim
+		Sigui~\(\{(x_{i},f(x_{i}))\}_{i=0}^{n}\) un problema d'interpolació de Lagrange amb nodes equiespaiats.
+		Aleshores, si~\(h=\frac{x_{n}-x_{0}}{n}\) tenim
 		\[
 		    [x_{0},\dots,x_{n}]=\frac{\Delta^{n}f(x_{0})}{n!h^{n}}.
 		\]
 		\begin{proof}
-			Ho farem per inducció sobre \(n\).
-			El cas \(n=1\) és cert, ja que
+			Ho farem per inducció sobre~\(n\).
+			El cas~\(n=1\) és cert, ja que
 			\begin{align*}
 			\Delta f(x_{0})&=f(x_{0}+h)-f(x_{0})\tag{\myref{def:nodes equiespaiats}}\\
 			&=f(x_{1})-f(x_{0})\\
@@ -432,7 +432,7 @@
 			[x_{0},x_{n}]=\frac{\Delta f(x_{0})}{h}.
 			\end{equation}
 			
-			Suposem ara que l'enunciat és cert per a \(k\) fix i demostrem-ho pel cas \(k+1\).
+			Suposem ara que l'enunciat és cert per a~\(k\) fix i demostrem-ho pel cas~\(k+1\).
 			Tenim que
 			\begin{align*}
 			\Delta^{k+1}f(x_{0})&=\Delta(\Delta^{k}(f(x_{0}))\tag{\myref{def:nodes equiespaiats}}\\
@@ -452,7 +452,7 @@
 \section{Polinomis interpoladors per splines}
 	\subsection{Interpolació per splines}
 	\begin{definition}
-		Siguin \(\Delta=\{x_{i}\}_{i=0}^{n}\) una partició d'un interval \([a,b]\subset\mathbb{R}\) i \(s\colon[a,b]\longrightarrow\mathbb{R}\) una funció a trossos de classe \(\mathcal{C}^{p-1}\) de la forma
+		Siguin~\(\Delta=\{x_{i}\}_{i=0}^{n}\) una partició d'un interval~\([a,b]\subset\mathbb{R}\) i~\(s\colon[a,b]\longrightarrow\mathbb{R}\) una funció a trossos de classe~\(\mathcal{C}^{p-1}\) de la forma
 		\[s(x)=\begin{cases}
 		s_{1}(x) & \text{si }x\in[x_{0},x_{1}]\\
 		& \vdots\\
@@ -460,8 +460,8 @@
 		& \vdots\\
 		s_{n}(x) & \text{si }x\in[x_{n-1},x_{n}]
 		\end{cases}\]
-		amb \(s_{i}\in\mathbb{R}_{p}[x]\) per a tot \(i\in\{1,\dots,n\}\).
-		Aleshores direm que \(s\) és un spline de grau \(p\) associat a \(\Delta\).
+		amb~\(s_{i}\in\mathbb{R}_{p}[x]\) per a tot~\(i\in\{1,\dots,n\}\).
+		Aleshores direm que~\(s\) és un spline de grau~\(p\) associat a~\(\Delta\).
 		
 		Denotarem
 		\[
@@ -469,7 +469,7 @@
 		\]
 	\end{definition}
 	\begin{note}
-		Només treballarem amb splines cúbics, és a dir, amb \(p=3\), que són els més emparats.
+		Només treballarem amb splines cúbics, és a dir, amb~\(p=3\), que són els més emparats.
 	\end{note}
 	ai haig de córrer
 	\printbibliography
